# EveNet_NERSC

./: .gitignore  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirement_docker.txt  requirements.txt  test.py
Docker/: Dockerfile
NERSC/: count.py  data_loader_performance.py  global_shuffle.py  ray_tunnel.sh  start-head.sh  submit-ray-cluster-100M-ablation.sbatch  submit-ray-cluster-100M.sbatch  submit-ray-cluster-20M-ablation.sbatch  submit-ray-cluster-20M.sbatch  submit-ray-cluster.sbatch  submit_interactive.sh  update_log.py
data_preparation/: index.html
docs/: configuration.md  data_preparation.md  getting_started.md  index.md  model_architecture.md  predict.md  preprocess.md  preprocess_internal_only.md  train.md
evenet/: __init__.py  engine.py  playground.py  playground_new.py  predict.py  shared.py  train.py
preprocessing/: __init__.py  convert_evenet_to_spanet.py  dqm_util.py  evenet_data_converter.py  monitor_gen_matching.py  normalization.py  postprocessor.py  preprocess.py  preprocess_spanet.py  process_info.py  spanet_to_evenet_data_converter.py
search/: search_index.json
share/: all_local_135M.yaml  default-yulei-135M-diffusion.yaml  default-yulei-69M-diffusion.yaml  default-yulei-69M.yaml  default-yulei-partial.yaml  default-yulei.yaml  default.yaml  default_tiny.yaml  finetune-example.yaml  predict-example.yaml  predict-example_local.yaml  preprocess-example.yaml  preprocess_pretrain.yaml  preprocess_pretrain_partial.yaml  preprocess_pretrain_singleprocess.yaml  preprocess_pretrain_tiny.yaml  pretrain-yulei-large.yaml  (+5 more)
(+338 files in other folders)
